--- a/tsconfig.json
+++ b/tsconfig.json
@@ -32,12 +32,13 @@
       "@shared/*": ["./shared/*"]
     }
   },
-  "include": [
-    "client/**/*",
-    "server/**/*",
-    "shared/**/*",
-    "vite.config.ts",
-    "vite.config.server.ts"
-  ],
+"include": [
+  "src/**/*",
+  "client/**/*",
+  "server/**/*",
+  "shared/**/*",
+  "vite.config.ts",
+  "vite.config.server.ts"
+],
   "exclude": ["node_modules", "dist"]
 }
