--- a/frontend/tsconfig.json
+++ b/frontend/tsconfig.json
@@ -34,11 +34,8 @@
   },
 "include": [
   "src/**/*",
-  "client/**/*",
-  "server/**/*",
   "shared/**/*",
-  "vite.config.ts",
-  "vite.config.server.ts"
+  "vite.config.ts"
 ],
   "exclude": ["node_modules", "dist"]
 }
